# fast-api-lms

./: .gitignore  main.py  pyproject.toml  scratch.txt
api/: courses.py  sessions.py  users.py
