[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["Michael ejeagba <michaelnonso718@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.25.0"
fastapi = "^0.105.0"
pydentic = "^0.0.1.dev3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
